k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jasbeer-portfolio
  labels:
    app: jasbeer-portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: portfolio.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jasbeer-portfolio
                port:
                  number: 80
